Convert backend from submodule to normal directory

--- a/openRank-Backend/backend/vercel.json
+++ b/openRank-Backend/backend/vercel.json
@@ -1,6 +1,11 @@
 {
   "version": 2,
   "buildCommand": "npm install && npm run vercel-build",
+  "functions": {
+    "api/index.js": {
+      "includeFiles": "dist/**"
+    }
+  },
   "routes": [
     {
       "src": "/(.*)",
