--- a/openRank-Backend/backend/package.json
+++ b/openRank-Backend/backend/package.json
@@ -25,11 +25,12 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^6.1.0",
     "@nestjs/typeorm": "^10.0.0",
-    "typeorm": "^0.3.17",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -73,4 +74,3 @@
     "testEnvironment": "node"
   }
 }
-
